[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/ui/UiTextButtonLabel.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/fonts/BubbleRainbow-VGdn0.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/fonts/BarlowCondensed-BlackItalic.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/ui/BookBG.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/TitleBanner.png" type="Texture" id=5]
[ext_resource path="res://src/ui/TutorialMenu.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=11]
size = 45
outline_color = Color( 0.243137, 0.27451, 0.313726, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=12]
size = 24
outline_size = 3
outline_color = Color( 0.188235, 0.219608, 0.262745, 1 )
font_data = ExtResource( 2 )

[node name="TutorialMenu" type="Node2D"]
pause_mode = 2
script = ExtResource( 6 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 0.6 )

[node name="TitleBanner" type="Sprite" parent="."]
position = Vector2( 640, 134 )
scale = Vector2( 5, 5 )
texture = ExtResource( 5 )

[node name="Statsmenubg" type="Sprite" parent="."]
position = Vector2( 640, 376 )
scale = Vector2( 7, 7 )
texture = ExtResource( 4 )

[node name="TitleLabel" type="Label" parent="."]
margin_top = 102.0
margin_right = 1278.0
margin_bottom = 156.0
custom_colors/font_color = Color( 0.243137, 0.27451, 0.313726, 1 )
custom_fonts/font = SubResource( 11 )
text = "TUTORIAL"
align = 1
valign = 1

[node name="NextBtn" type="TextureButton" parent="."]
margin_left = 880.0
margin_top = 552.0
margin_right = 952.0
margin_bottom = 585.0

[node name="Label" type="Label" parent="NextBtn"]
margin_right = 71.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 1 )
text = "NEXT"
align = 1
valign = 1

[node name="PrevBtn" type="TextureButton" parent="."]
visible = false
margin_left = 328.0
margin_top = 552.0
margin_right = 432.0
margin_bottom = 585.0

[node name="Label" type="Label" parent="PrevBtn"]
margin_right = 71.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 1 )
text = "PREV"
align = 1
valign = 1

[node name="LeftLabel" type="Label" parent="."]
margin_left = 384.0
margin_top = 240.0
margin_right = 568.0
margin_bottom = 448.0
custom_fonts/font = SubResource( 12 )
text = "TYPE THE WORDS ON THE PLATFORM TO SWITCH THE CHARACTER"
align = 1
valign = 1
autowrap = true

[node name="RightLabel" type="Label" parent="."]
margin_left = 712.0
margin_top = 240.0
margin_right = 899.0
margin_bottom = 448.0
custom_fonts/font = SubResource( 12 )
text = "COLLECT THE FRUITS TO SCORE. FAILING TO DO SO WILL LOSE LIVES"
align = 1
valign = 1
autowrap = true

[connection signal="pressed" from="NextBtn" to="." method="_on_NextBtn_pressed"]
[connection signal="pressed" from="PrevBtn" to="." method="_on_PrevBtn_pressed"]
